tests/semantic_errors/andrei10_4.tl
require "ifj21"

function main()
    local id : integer = "st1".."st78"
end

main()
